[gd_scene load_steps=6 format=3 uid="uid://esh1m38y3a1s"]

[ext_resource type="Theme" uid="uid://c3hfmpsb3fvhr" path="res://assets/game_theme.tres" id="1_rs2rl"]
[ext_resource type="Script" path="res://src/shop/shop_display.gd" id="2_mjvqv"]
[ext_resource type="Texture2D" uid="uid://by5wpf5vbkrw1" path="res://assets/custom/Card.png" id="3_233mt"]
[ext_resource type="FontFile" uid="uid://drlkmr7jve2ep" path="res://assets/m5x7.ttf" id="4_v80o0"]

[sub_resource type="Theme" id="Theme_vno4v"]
default_font = ExtResource("4_v80o0")

[node name="ShopDisplay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rs2rl")
script = ExtResource("2_mjvqv")
callback = null

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("3_233mt")
centered = false

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.227, 3.2)

[node name="HBoxContainer" type="MarginContainer" parent="."]
texture_filter = 2
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource("Theme_vno4v")

[node name="TopBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "CARD NAME"

[node name="CostLabel" type="Label" parent="HBoxContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 10
text = "1
"

[node name="ImageGap" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(0, 112)
layout_mode = 2
text = "Description
"
autowrap_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Type"

[connection signal="gui_input" from="HBoxContainer" to="." method="_on_h_box_container_gui_input"]
